# kodi-addon-builder

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  NEWS_FEATURE_TASKS.md  PLAN.md  README.md  RELEASE-PLAN.md  kodi-addon-builder-bug-report.md  kodi-addon-builder-news-bug-report.md  pyproject.toml
.github/: release-please-config.json
.github/workflows/: ci.yml  release.yml
docs/: example-github-workflow.yml  example-pre-commit-config.yaml
script.module.test-kodi-addon-builder/: CHANGELOG.md  addon.xml  pyproject.toml
src/kodi_addon_builder/: __init__.py  cli.py  git_operations.py  news_formatter.py
tests/: conftest.py  test_bump.py  test_git_commands.py  test_git_operations.py  test_news_formatter.py
